--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Lmint</title>
+	<title>TramNQ</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="sheet/bootstrap.css">
 	<link rel="stylesheet" href="sheet/ionicons.min.css">
@@ -17,7 +17,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12 text-center">
-					<h3 class="py-3">About <span>Me</span></h3>
+					<h3 class="py-3">Tram<span>NQ</span></h3>
 				</div>
 			</div>
 		</div>
@@ -37,31 +37,31 @@
 							<p class="sayHi">Hello</p>
 
 							<div class="name">
-								<p><span>I'm</span> Lmint</p>
+								<p><span>I'm</span> Nguyen Quoc Tram</p>
 								<p class="s">Verified
 									<span class="ion-ios-checkmark-outline"></span>
 								</p>
-								<p><span class="ion-android-globe"></span> AnonyViet.com</p>
+								<!-- <p><span class="ion-android-globe"></span> lien ket</p> -->
 							</div>
 							<hr>
 
 							<div class="detailInfo">
 								<div class="row my-2">
-									<div class="col-lg-4 col-12 boldd">Tên</div>
-									<div class="col-lg-8 col-12 b">Lmint</div>
+									<div class="col-lg-4 col-12 boldd">Born</div>
+									<div class="col-lg-8 col-12 b">2001</div>
 								</div>
 								<div class="row my-2">
-									<div class="col-lg-4 col-12 boldd">Công ty</div>
-									<div class="col-lg-8 col-12 b">AnonyViet Site</div>
+									<div class="col-lg-4 col-12 boldd">Nationality</div>
+									<div class="col-lg-8 col-12 b">Vietnam</div>
 								</div>
 								<div class="row my-2">
-									<div class="col-lg-4 col-12 boldd">Jobs</div>
-									<div class="col-lg-8 col-12 b">Web Developer</div>
+									<div class="col-lg-4 col-12 boldd">Study</div>
+									<div class="col-lg-8 col-12 b">Can Tho University</div>
 								</div>
-								<div class="row">
-									<div class="col-lg-4 col-12 boldd">Tuổi</div>
-									<div class="col-lg-8 col-12 b">19 Years Old</div>
-								</div>
+								<!-- <div class="row">
+									<div class="col-lg-4 col-12 boldd"> trongos </div>
+									<div class="col-lg-8 col-12 b">trống </div>
+								</div> -->
 
 							</div>
 						</div>
