--- a/index.html
+++ b/index.html
@@ -72,14 +72,20 @@
 			<div class="col-11 mx-auto bg-danger contact text-center">
 				<div class="social col-12">
 					<!-- Facebook -->
-					<a href="https://facebook.com/minhthong.lu.58" target="_blank">
+					<a href="https://www.facebook.com/quoctramm/" target="_blank">
 						<span class="ion-social-facebook mr-4 mr-lg-5"></span>
 					</a>
-					<span class="ion-social-instagram-outline mr-4 mr-lg-5 ml-lg-3"></span>
-					<span class="ion-social-whatsapp-outline mr-4 mr-lg-5 ml-lg-3"></span>
-					<span class="ion-social-skype-outline mr-4 mr-lg-5 ml-lg-3"></span>
-					<span class="ion-social-twitter-outline mr-4 mr-lg-5 ml-lg-3"></span>
-					<span class="ion-social-linkedin-outline ml-lg-3"></span>
+					<!-- Instagram -->
+					<a href="https://www.instagram.com/qctm_ng/" target="_blank">
+						<span class="ion-social-instagram-outline mr-4 mr-lg-5 ml-lg-3"></span>
+					</a>
+					<!-- Twitter -->
+					<a href="https://twitter.com/quoctramm" target="_blank">
+						<span class="ion-social-twitter-outline mr-4 mr-lg-5 ml-lg-3"></span>
+					</a>
+					<!-- <span class="ion-social-whatsapp-outline mr-4 mr-lg-5 ml-lg-3"></span> -->
+					<!-- <span class="ion-social-skype-outline mr-4 mr-lg-5 ml-lg-3"></span> -->
+					<!-- <span class="ion-social-linkedin-outline ml-lg-3"></span> -->
 				</div>
 			</div>
 		</div>
