--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 					<div class="row">
 						<div class="avatarBox col-12 col-lg-5">
-							<img src="img/3.png" class="img-fluid">
+							<img src="img/avt.jpg" class="img-fluid">
 						</div>
 
 						<div class="infoBox col-12 col-lg-6 mt-2 mt-lg-0">
@@ -83,9 +83,18 @@
 					<a href="https://twitter.com/quoctramm" target="_blank">
 						<span class="ion-social-twitter-outline mr-4 mr-lg-5 ml-lg-3"></span>
 					</a>
-					<!-- <span class="ion-social-whatsapp-outline mr-4 mr-lg-5 ml-lg-3"></span> -->
-					<!-- <span class="ion-social-skype-outline mr-4 mr-lg-5 ml-lg-3"></span> -->
-					<!-- <span class="ion-social-linkedin-outline ml-lg-3"></span> -->
+
+					<a href=mailto:quoctramm@gmail.com?subject="HTML link">
+						<span class="ion-android-mail mr-4 mr-lg-5 ml-lg-3"></span>
+					</a>
+
+					<a href="https://www.youtube.com/channel/UC2rKBRVaCLHHTgaWxRuLVIw" target="_blank">
+						<span class="ion-social-youtube-outline mr-4 mr-lg-5 ml-lg-3"></span>
+					</a>
+
+					<a href="https://github.com/TramNQ" target="_blank">
+						<span class="ion-social-github-outline mr-4 mr-lg-5 ml-lg-3"></span>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -97,7 +106,7 @@
 		<div class="row">
 			<div class="col-11 text-right">
 				<p class="license mr-lg-4 mr-0">
-					<a href="https://anonyviet.com"></a>
+					<a href="Nguyen Quoc Tram"></a>
 				</p>
 			</div>
 		</div>
