--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 		</div>
 	</div>
 
-	<audio controls autoplay loop>
-        <source src="../tramnq.github.io/audio/Wordless Cliffs.mp3">
-    </audio>
+	
 
 </body>
 
-
+<audio controls autoplay loop hidden preload="auto">
+	<source src="../tramnq.github.io/audio/Wordless Cliffs.mp3" type="audio/mpeg" >
+</audio>
 
 </html>
